--- a/index.html
+++ b/index.html
@@ -18,119 +18,135 @@
 <body>
     <!-- ======== HEADER ========= -->
     <header class="page-header">
-        <nav class="page-nav">
-            <a class="page-logo" href="./index.html">Web<span class="text-one">Studio</span></a>
-            <ul class="menu">
-                <li class="menu-item"><a class="menu-link" href="./index.html">Studio</a></li>
-                <li class="menu-item"><a class="menu-link" href="">Portfolio</a></li>
-                <li class="menu-item"><a class="menu-link" href="">Contacts</a></li>
-            </ul>
-        </nav>
-        <address class="address-imfo">
-            <ul>
-                <li id="contacts"><a class="info" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="info" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-            </ul>
-        </address>
+        <div class="container header-container">
+            <nav class="page-nav">
+                <a class="page-logo" href="./index.html">Web<span class="text-one">Studio</span></a>
+                <ul class="menu">
+                    <li class="menu-item"><a class="menu-link" href="./index.html">Studio</a></li>
+                    <li class="menu-item"><a class="menu-link" href="">Portfolio</a></li>
+                    <li class="menu-item"><a class="menu-link" href="">Contacts</a></li>
+                </ul>
+            </nav>
+
+            <address class="address-info">
+                <ul class="address-list">
+                    <li id="contacts"><a class="info" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a class="info" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                </ul>
+            </address>
+        </div>
     </header>
     <main>
         <!-- =======HERO====== -->
         <section class="hero">
-            <h1 class="title-one">Effective Solutions
-                for Your Business</h1>
-            <button class="button-hero" type="button">Order Service</button>
+            <div class="hero-container">
+                <h1 class="title-one">Effective Solutions
+                    for Your Business</h1>
+                <button class="button-hero" type="button">Order Service</button>
+            </div>
         </section>
+        <!-- =====BENEFITS====== -->
         <section>
-            <!-- =====BENEFITS====== -->
-            <h2 class="title-two-a">Benefits</h2>
-            <ul class="list">
-                <li class="line">
-                    <h3 class="title-three" id="studio">Strategy</h3>
-                    <p class="text-p">Our goal is to identify the business
-                        problem to walk away with the perfect and creative solution.</p>
-                </li>
+            <div class="container">
+                <h2 class="visually-hidden">Benefits</h2>
+                <ul class="ul-a">
+                    <li class="line">
+                        <h3 class="title-three" id="studio">Strategy</h3>
+                        <p class="text-p">Our goal is to identify the business
+                            problem to walk away with the perfect and creative solution.</p>
+                    </li>
 
-                <li class="line">
-                    <h3 class="title-three">Punctuality</h3>
-                    <p class="text-p">Bring the key message to the brand's audience for the best price within the
-                        shortest possible
-                        time.
-                    </p>
-                </li>
+                    <li class="line">
+                        <h3 class="title-three">Punctuality</h3>
+                        <p class="text-p">Bring the key message to the brand's audience for the best price within the
+                            shortest possible
+                            time.
+                        </p>
+                    </li>
 
-                <li class="line">
-                    <h3 class="title-three">Diligence</h3>
-                    <p class="text-p">Research and confirm brands that present the strongest digital growth
-                        opportunities and minimize
-                        risk.
-                    </p>
-                </li>
+                    <li class="line">
+                        <h3 class="title-three">Diligence</h3>
+                        <p class="text-p">Research and confirm brands that present the strongest digital growth
+                            opportunities and minimize
+                            risk.
+                        </p>
+                    </li>
 
-                <li class="line">
-                    <h3 class="title-three">Technologies</h3>
-                    <p class="text-p">Design practice focused on digital experiences. We bring forth a deep passion for
-                        problem-solving.
-                    </p>
-                </li>
-            </ul>
+                    <li class="line">
+                        <h3 class="title-three">Technologies</h3>
+                        <p class="text-p">Design practice focused on digital experiences. We bring forth a deep passion
+                            for
+                            problem-solving.
+                        </p>
+                    </li>
+                </ul>
+            </div>
         </section>
         <section class="section-portfolio">
-            <h2 class="title-two-b" id="portfolio">Our Team</h2>
-            <ul>
-                <li class="page-portfolio"><img src="./images/Mark.jpg" alt="man" width="264" height="260">
-                    <h3 class="title-three-b">Mark Guerrero</h3>
-                    <p class="text-p-b">Product Designer</p>
-                </li>
-                <li class="page-portfolio"><img src="./images/Tom.jpg" alt="man" width="264" height="260">
-                    <h3 class="title-three-b">Tom Ford</h3>
-                    <p class="text-p-b">Frontend Developer</p>
-                </li>
-                <li class="page-portfolio"><img src="./images/Camila.jpg" alt="woman" width="264" height="260">
-                    <h3 class="title-three-b">Camila Garcia</h3>
-                    <p class="text-p-b">Marketing</p>
-                </li>
-                <li class="page-portfolio"><img src="./images/Daniel.jpg" alt="man" width="264" height="260">
-                    <h3 class="title-three-b">Daniel Wilson</h3>
-                    <p class="text-p-b">UI Designer</p>
-                </li>
-            </ul>
+            <div class="container">
+                <h2 class="title-two-b" id="portfolio">Our Team</h2>
+                <ul class="ul-b">
+                    <li class="page-portfolio"><img src="./images/Mark.jpg" alt="man" width="264" height="260">
+                        <h3 class="title-three-b">Mark Guerrero</h3>
+                        <p class="text-p-b">Product Designer</p>
+                    </li>
+                    <li class="page-portfolio"><img src="./images/Tom.jpg" alt="man" width="264" height="260">
+                        <h3 class="title-three-b">Tom Ford</h3>
+                        <p class="text-p-b">Frontend Developer</p>
+                    </li>
+                    <li class="page-portfolio"><img src="./images/Camila.jpg" alt="woman" width="264" height="260">
+                        <h3 class="title-three-b">Camila Garcia</h3>
+                        <p class="text-p-b">Marketing</p>
+                    </li>
+                    <li class="page-portfolio"><img src="./images/Daniel.jpg" alt="man" width="264" height="260">
+                        <h3 class="title-three-b">Daniel Wilson</h3>
+                        <p class="text-p-b">UI Designer</p>
+                    </li>
+                </ul>
+            </div>
         </section>
         <section>
-            <h2 class="title-two-c">Our Portfolio</h2>
-            <ul>
-                <li><img src="./images/banking.jpg" alt="design" width="360" height="300">
-                    <h3 class="title-three-c">Banking App</h3>
-                    <p class="text-p-c">App</p>
-                </li>
-                <li><img src="./images/cashless.jpg" alt="Marketing" width="360" height="300">
-                    <h3 class="title-three-c">Cashless Payment</h3>
-                    <p class="text-p-c">Marketing</p>
-                </li>
-                <li><img src="./images/app.jpg" alt="app" width="360" height="300">
-                    <h3 class="title-three-c">Meditation App</h3>
-                    <p class="text-p-c">App</p>
-                </li>
-                <li><img src="./images/taxi.jpg" alt="taxi" width="360" height="300">
-                    <h3 class="title-three-c">Taxi Service</h3>
-                    <p class="text-p-c">Marketing</p>
-                </li>
-                <li><img src="./images/design.jpg" alt="design" width="360" height="300">
-                    <h3 class="title-three-c">Screen Illustrations</h3>
-                    <p class="text-p-c">Design</p>
-                </li>
-                <li><img src="./images/online.jpg" alt="woman" width="360" height="300">
-                    <h3 class="title-three-c">Online Courses</h3>
-                    <p class="text-p-c">Marketing</p>
-                </li>
-            </ul>
+            <div class="container">
+                <h2 class="title-two-c">Our Portfolio</h2>
+                <ul class="ul-c">
+                    <li class="li-c"><img src="./images/banking.jpg" alt="design" width="360" height="300">
+                        <h3 class="title-three-c">Banking App</h3>
+                        <p class="text-p-c">App</p>
+                    </li>
+                    <li class="li-c"><img src="./images/cashless.jpg" alt="Marketing" width="360" height="300">
+                        <h3 class="title-three-c">Cashless Payment</h3>
+                        <p class="text-p-c">Marketing</p>
+                    </li>
+                    <li class="li-c"><img src="./images/app.jpg" alt="app" width="360" height="300">
+                        <h3 class="title-three-c">Meditation App</h3>
+                        <p class="text-p-c">App</p>
+                    </li>
+                    <li class="li-c"><img src="./images/taxi.jpg" alt="taxi" width="360" height="300">
+                        <h3 class="title-three-c">Taxi Service</h3>
+                        <p class="text-p-c">Marketing</p>
+                    </li>
+                    <li class="li-c"><img src="./images/design.jpg" alt="design" width="360" height="300">
+                        <h3 class="title-three-c">Screen Illustrations</h3>
+                        <p class="text-p-c">Design</p>
+                    </li>
+                    <li class="li-c"><img src="./images/online.jpg" alt="woman" width="360" height="300">
+                        <h3 class="title-three-c">Online Courses</h3>
+                        <p class="text-p-c">Marketing</p>
+                    </li>
+                </ul>
+            </div>
         </section>
+
     </main>
     <!--=== footer ===-->
     <footer class="footer-end">
-        <a class="footer-logo" href="./index.html">Web<span class="logo-two">Studio</span></a>
-        <p class="end">Increase the flow of customers and sales for your business with digital marketing & growth
-            solutions.</p>
+        <div class="container">
+            <a class="footer-logo" href="./index.html">Web<span class="logo-two">Studio</span></a>
+            <p class="end">Increase the flow of customers and sales for your business with digital marketing & growth
+                solutions.</p>
+        </div>
     </footer>
+
 </body>
 
 </html>
