--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <main>
         <!-- =======HERO====== -->
         <section class="hero">
-            <div class="hero-container">
+            <div class="container hero-container">
                 <h1 class="title-one">Effective Solutions
                     for Your Business</h1>
                 <button class="button-hero" type="button">Order Service</button>
@@ -47,7 +47,7 @@
         </section>
         <!-- =====BENEFITS====== -->
         <section>
-            <div class="container">
+            <div class="container container-b">
                 <h2 class="visually-hidden">Benefits</h2>
                 <ul class="ul-a">
                     <li class="line">
@@ -83,55 +83,75 @@
             </div>
         </section>
         <section class="section-portfolio">
-            <div class="container">
+            <div class="container container-b">
                 <h2 class="title-two-b" id="portfolio">Our Team</h2>
                 <ul class="ul-b">
                     <li class="page-portfolio"><img src="./images/Mark.jpg" alt="man" width="264" height="260">
-                        <h3 class="title-three-b">Mark Guerrero</h3>
-                        <p class="text-p-b">Product Designer</p>
+                        <div class="portfolio-person">
+                            <h3 class="title-three-b">Mark Guerrero</h3>
+                            <p class="text-p-b">Product Designer</p>
+                        </div>
                     </li>
                     <li class="page-portfolio"><img src="./images/Tom.jpg" alt="man" width="264" height="260">
-                        <h3 class="title-three-b">Tom Ford</h3>
-                        <p class="text-p-b">Frontend Developer</p>
+                        <div class="portfolio-person">
+                            <h3 class="title-three-b">Tom Ford</h3>
+                            <p class="text-p-b">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="page-portfolio"><img src="./images/Camila.jpg" alt="woman" width="264" height="260">
-                        <h3 class="title-three-b">Camila Garcia</h3>
-                        <p class="text-p-b">Marketing</p>
+                        <div class="portfolio-person">
+                            <h3 class="title-three-b">Camila Garcia</h3>
+                            <p class="text-p-b">Marketing</p>
+                        </div>
                     </li>
                     <li class="page-portfolio"><img src="./images/Daniel.jpg" alt="man" width="264" height="260">
-                        <h3 class="title-three-b">Daniel Wilson</h3>
-                        <p class="text-p-b">UI Designer</p>
+                        <div class="portfolio-person">
+                            <h3 class="title-three-b">Daniel Wilson</h3>
+                            <p class="text-p-b">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
         </section>
         <section>
-            <div class="container">
+            <div class="container container-c">
                 <h2 class="title-two-c">Our Portfolio</h2>
                 <ul class="ul-c">
                     <li class="li-c"><img src="./images/banking.jpg" alt="design" width="360" height="300">
-                        <h3 class="title-three-c">Banking App</h3>
-                        <p class="text-p-c">App</p>
+                        <div class="container-addition">
+                            <h3 class="title-three-c">Banking App</h3>
+                            <p class="text-p-c">App</p>
+                        </div>
                     </li>
                     <li class="li-c"><img src="./images/cashless.jpg" alt="Marketing" width="360" height="300">
-                        <h3 class="title-three-c">Cashless Payment</h3>
-                        <p class="text-p-c">Marketing</p>
+                        <div class="container-addition">
+                            <h3 class="title-three-c">Cashless Payment</h3>
+                            <p class="text-p-c">Marketing</p>
+                        </div>
                     </li>
                     <li class="li-c"><img src="./images/app.jpg" alt="app" width="360" height="300">
-                        <h3 class="title-three-c">Meditation App</h3>
-                        <p class="text-p-c">App</p>
+                        <div class="container-addition">
+                            <h3 class="title-three-c">Meditation App</h3>
+                            <p class="text-p-c">App</p>
+                        </div>
                     </li>
                     <li class="li-c"><img src="./images/taxi.jpg" alt="taxi" width="360" height="300">
-                        <h3 class="title-three-c">Taxi Service</h3>
-                        <p class="text-p-c">Marketing</p>
+                        <div class="container-addition">
+                            <h3 class="title-three-c">Taxi Service</h3>
+                            <p class="text-p-c">Marketing</p>
+                        </div>
                     </li>
                     <li class="li-c"><img src="./images/design.jpg" alt="design" width="360" height="300">
-                        <h3 class="title-three-c">Screen Illustrations</h3>
-                        <p class="text-p-c">Design</p>
+                        <div class="container-addition">
+                            <h3 class="title-three-c">Screen Illustrations</h3>
+                            <p class="text-p-c">Design</p>
+                        </div>
                     </li>
                     <li class="li-c"><img src="./images/online.jpg" alt="woman" width="360" height="300">
-                        <h3 class="title-three-c">Online Courses</h3>
-                        <p class="text-p-c">Marketing</p>
+                        <div class="container-addition">
+                            <h3 class="title-three-c">Online Courses</h3>
+                            <p class="text-p-c">Marketing</p>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -140,7 +160,7 @@
     </main>
     <!--=== footer ===-->
     <footer class="footer-end">
-        <div class="container">
+        <div class="container container-footer">
             <a class="footer-logo" href="./index.html">Web<span class="logo-two">Studio</span></a>
             <p class="end">Increase the flow of customers and sales for your business with digital marketing & growth
                 solutions.</p>
