--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             </div>
         </section>
         <!-- =====BENEFITS====== -->
-        <section>
-            <div class="container container-b">
+        <section class="section-a">
+            <div class="container">
                 <h2 class="visually-hidden">Benefits</h2>
                 <ul class="ul-a">
                     <li class="line">
@@ -83,7 +83,7 @@
             </div>
         </section>
         <section class="section-portfolio">
-            <div class="container container-b">
+            <div class="container">
                 <h2 class="title-two-b" id="portfolio">Our Team</h2>
                 <ul class="ul-b">
                     <li class="page-portfolio"><img src="./images/Mark.jpg" alt="man" width="264" height="260">
@@ -113,8 +113,8 @@
                 </ul>
             </div>
         </section>
-        <section>
-            <div class="container container-c">
+        <section class="section-c">
+            <div class="container">
                 <h2 class="title-two-c">Our Portfolio</h2>
                 <ul class="ul-c">
                     <li class="li-c"><img src="./images/banking.jpg" alt="design" width="360" height="300">
